[FIX] web: remove unnecessary scrollbars in notebook
This commit removes extraneous scrollbars that could appear in notebook
headers or in HTML fields inside notebooks, depending on the content and
browser zoom level.

task-5283167

--- a/addons/web/static/src/core/notebook/notebook.scss
+++ b/addons/web/static/src/core/notebook/notebook.scss
@@ -9,6 +9,7 @@
     .o_notebook_headers {
         margin: 0 var(--Notebook-margin-x, 0);
         overflow-x: auto;
+        overflow-y: hidden;
 
         @include media-breakpoint-down(md) {
             &::-webkit-scrollbar {
