--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -527,6 +527,7 @@
 
                 > .o_field_html .note-editable {
                     min-height: 180px;
+                    overflow-y: hidden;
                     &:hover, &:focus {
                         border-color: transparent;
                     }
